# admin-dashboard-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  elk-interop.js  index.html  package.json  tailwind.config.js
js/: d3-flow-renderer.js
src/: api.rs  main.rs
src/components/: button.rs  card.rs  flow_viewer.rs  flows_sidebar.rs  info_panel.rs  input.rs  mod.rs  sidebar.rs  stat_card.rs  zoom_controls.rs
src/components/nodes/: audio_node.rs  comparison_node.rs  converter_node.rs  filter_node.rs  gate_node.rs  input_node.rs  json_node.rs  llm_node.rs  merger_node.rs  mod.rs  output_node.rs  search_node.rs  template_node.rs  transform_node.rs  utility_node.rs  video_node.rs  web_node.rs
src/components/profiles/: edit_persona_dialog.rs  mod.rs  personas_table.rs  personas_toolbar.rs  table_row.rs  view_persona_dialog.rs
src/hooks/: mod.rs  use_auth.rs
src/layouts/: main_layout.rs  mod.rs
src/pages/: dashboard.rs  mod.rs  profiles.rs  settings.rs  users.rs  workflows.rs
src/utils/: elk_layout.rs  mod.rs
