[package]
name = "workflow-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew/" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Window", "Storage", "console", "HtmlDocument", "Location", "HtmlSelectElement", "HtmlInputElement"] }
gloo-console = "0.3"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"

# Note: Original project had dependencies on internal API clients and types.
# Those have been removed. You'll need to implement your own API client
# or integrate with your backend service.

